--- a/app/css/models/reset.css
+++ b/app/css/models/reset.css
@@ -28,3 +28,6 @@ input::-webkit-inner-spin-button {
 input:-webkit-autofill {
     -webkit-box-shadow: 0 0 0px 1000px white inset;
 }
+
+::-moz-selection {background:#bd3741;color:#fff;}
+::selection {background:#bd3741; color:#fff;}
